# career-intel-mcp

./: .env.example  PROMPTS.md  README.md  agentic_resume.py  career_intel.db  pyproject.toml
app/: __main__.py  config.py  database.py  llm.py  logging.py  main.py  models.py  prompts.py  rag.py  repository.py  resources.py  schemas.py  scraper.py  services.py  tools.py
tests/: conftest.py  test_scraper.py  test_services.py  test_tools.py
