[project]
name = "career-intel-mcp"
version = "0.1.0"
description = "AI-powered career intelligence platform as a Model Context Protocol (MCP) server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.25",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "uvicorn>=0.49",
    "python-dotenv>=1.2",
    "starlette>=1.3",
    "sse-starlette>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "mypy>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
